2005-01-31 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * Finish cleaning up my JPEG mess. Should be ok now.
	* Getting toward a RLE very similar to JPEG. Every RLE stuff is now self
	contained within the RLE* class(doh!)

2005-01-30 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   * SerieHeader::SetDirectory() allow recursive exploration of the Directory
	* SerieHeader::AddFileName() creates as many Coherent Files lists 
	              (same Serie UID) as it founds different Serie UID 
					   amongst the files instead of discarting any file 
						that doesn't match with the first one he found.
	* SerieHeader::OrderGdcmFileList has now one parameter : 
	               the Coherent Files list the user wants to sort
   * SerieHeader::GetFirstCoherentFileList()  |
   * SerieHeader::GetLastCoherentFileList()   | allow to parse 
	               the set of Coherent Files lists 
   * const SerieHeader::GdcmFileList &GetGdcmFileList() is kept, for backwards
	               compatibility (it returns the *first* Coherent Files list, 
						since there was only one before)
	* Test/TestSerieHeader gets gdcmData as a default root directory		
					  
2005-01-28 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Remove friend between DocEntry and File classes
   * Remove friend between PixelReadConverter and RLEFramesInfo, 
     JPEGFragmentsInfo

2005-01-28 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmFile.cxx, gdcmDocument.cxx : fix the bug on the group|element
     0002|0000. The value was incorrect.

2005-01-28 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * vtk/vtkGdcmWriter.[h|cxx] : add the gestion of UID

2005-01-28 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmUtil.cxx : compilation fix on Win32
   * src/gdcmUtil.[h|cxx] : Set the default GDCM UID in a static constant
     variable, to be easy found. Add methods to change the default UID.