@@ -1,6 +1,10 @@
+2005-01-31 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
+  * src/gdcmDirList.[h|cxx] : add method to find a directory
+  * Test/TestAllReadCompareDicom.cxx : bug fix under Windows
+
 2005-01-31 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Finish cleaning up my JPEG mess. Should be ok now.
-	* Getting toward a RLE very similar to JPEG. Every RLE stuff is now self
+  * Getting toward a RLE very similar to JPEG. Every RLE stuff is now self
 	contained within the RLE* class(doh!)
 
 2005-01-30 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
